fix: update profile alignment, button background, and add media queries for desktop backgrounds

--- a/style.css
+++ b/style.css
@@ -43,15 +43,13 @@ body * {
 
 /* profile */
 #profile {
-  text-align: justify;
+  text-align: center;
   padding: 24px;
 }
 
 #profile img {
   width: 350px;
   margin: auto;
-  display: block;
-  border-radius: 25px;
 }
 
 #profile p {
@@ -71,7 +69,7 @@ body * {
 #switch button {
   width: 32px;
   height: 32px;
-  background: white var(--switch-bg-url) no-repeat;
+  background: white var(--switch-bg-url) no-repeat center;
   border-radius: 50%;
 
   position: absolute;
@@ -79,11 +77,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -91,7 +94,7 @@ body * {
   width: 64px;
   height: 24px;
   background: var(--surface-color);
-  border: 1px solid var(--stroke-color);
+  border: var(--stroke-color);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
@@ -110,7 +113,6 @@ ul {
 ul li a {
   display: flex;
   align-items: center;
-
 
   padding: 16px 24px;
 
@@ -159,4 +161,36 @@ ul li a:hover {
 footer {
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+
+  to {
+    left: 0;
+  }
 }
